tests/paczka2/big_fuzzy/38484591.err
Error in line 7: QyMHI A685 1,9
Error in line 3: iTWV97K S143 92,0
Error in line 12: iTWV97K A685 48,4
Error in line 27: CygEPFpq A196 159,0
Error in line 31: CygEPFpq A685 183,0
Error in line 44: iTWV97K A685 96,99
Error in line 40: k7KynX3K28n A196 96,7
Error in line 63: CygEPFpq S964 92,9
Error in line 66: k7KynX3K28n S143 43,7
Error in line 69: CygEPFpq S143 36,2
Error in line 80: VrJLghveiW A685 81,1
Error in line 79: c61HR A685 13,9
Error in line 111: iTWV97K A685 11,9
Error in line 123: CygEPFpq A685 22,6
Error in line 128: CygEPFpq S143 33,2
Error in line 131: CygEPFpq S964 71,6
Error in line 135: QyMHI A685 9,0
Error in line 129: VrJLghveiW A196 94,8
Error in line 134: iTWV97K S964 15,1
Error in line 137: CygEPFpq A685 8,5
Error in line 163: iTWV97K S96L 21,0
Error in line 161: iTWV97K A685 50,8
Error in line 152: A685 A685 69,7
Error in line 178: VrJLghveiW S964 6,8
Error in line 195: CygEPFpq A685 1,86
Error in line 198: CygEPFpq A196 23,73
Error in line 209: iTWV97K S964 27,5
Error in line 211: iTWV97K A196 44,3
Error in line 213: iTWV97K S964 2,0
Error in line 233: CygEPFpq S143 42,&
Error in line 234: CygEPFpq A685 71,7
Error in line 237: QyMHI S143 52,8
Error in line 249: A685 A196 45,1
